--- a/Source/.gitignore
+++ b/Source/.gitignore
@@ -1,3 +1,4 @@
+*.tgh
 
 # Created by https://www.toptal.com/developers/gitignore/api/twincat3,visualstudiocode,visualstudio,microsoftoffice,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=twincat3,visualstudiocode,visualstudio,microsoftoffice,node
